force-app/main/default/objects/B25__Reservation_Color__c/B25__Reservation_Color__c.object-meta.xml
<CustomObject>
    <description>Defines how Reservations look on the Calendar, depending on conditions like status and type.</description>
    <label>Reservation Color</label>
    <nameField>
        <displayFormat>RCOL-{000000}</displayFormat>
        <label>Reservation Color Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>