force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Background_Color__c</fullName>
    <defaultValue>&quot;orange&quot;</defaultValue>
    <description>Hex code or valid CSS color name</description>
    <inlineHelpText>Code hexadécimal ou nom de couleur CSS valide</inlineHelpText>
    <label>Background Color</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>