force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Border_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Border_Color__c</fullName>
    <description>Hex code or valid CSS color name. Leave empty for no border.</description>
    <inlineHelpText>Code hexadécimal ou nom de couleur CSS valide. Laissez vide pour ne pas afficher de bordure.</inlineHelpText>
    <label>Border Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>