force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Calendar to which this record applies.</description>
    <inlineHelpText>Le calendrier auquel s’applique cet enregistrement.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Reservation Colors</relationshipLabel>
    <relationshipName>Reservation_Colors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>