force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Opacity__c.field-meta.xml
<CustomField>
    <fullName>B25__Opacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Value between 0 and 1. 0 being completely transparent and 1 being completely opaque.</description>
    <inlineHelpText>Valeur comprise entre 0 et 1. 0 étant complètement transparent et 1 étant complètement opaque.</inlineHelpText>
    <label>Opacity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>