force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Reservation_Buffer_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Buffer_Color__c</fullName>
    <description>The background color of the buffer areas of the reservation.</description>
    <inlineHelpText>La couleur de fond des zones tampons de la réservation.</inlineHelpText>
    <label>Reservation Buffer Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>