force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If filled in, applies only to Reservations with this type.</description>
    <inlineHelpText>Si ce champ est rempli, il s’applique uniquement aux réservations de ce type.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Reservation Colors</relationshipLabel>
    <relationshipName>Reservation_Colors</relationshipName>
    <type>Lookup</type>
</CustomField>