force-app/main/default/objects/B25__Reservation_Color__c/fields/B25__Staff_Conflict_Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>B25__Staff_Conflict_Icon_Color__c</fullName>
    <defaultValue>&quot;black&quot;</defaultValue>
    <description>Hex code or valid CSS color name.</description>
    <inlineHelpText>Code hexadécimal ou nom de couleur CSS valide.</inlineHelpText>
    <label>Staff Conflict Icon Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>